# tv-bot-public

./: .env.example  .gitignore  README.md  pyproject.toml
dashboard/: index.html  vercel.json
src/utbot/: __init__.py  api_server.py  config.py  engine.py  exchange.py  main.py  models.py  notifier.py  storage.py  strategy.py
tests/: test_engine.py  test_exchange.py  test_main.py  test_notifier.py  test_storage.py  test_strategy.py
